beta move mode is in place, very janky

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <textarea id="tex_tex" readonly></textarea>
     </div>-->
     <button onclick="recognize_all()">Convert!</button>
+    <button id="move_toggle" onclick="move_toggle()">Move Mode</button>
     <div id="askbox"></div>
 </body>
 </html>
